--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "gsi frotend",
   "main": "js/app.js",
   "dependencies": {
+    "envify": "^3.4.0",
     "flux": "^2.1.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
