--- a/package.json
+++ b/package.json
@@ -1,40 +1,48 @@
 {
-  "name": "gsi-react",
-  "version": "1.0.0",
-  "description": "gsi frotend",
-  "main": "js/app.js",
-  "dependencies": {
-    "envify": "^3.4.0",
-    "flux": "^2.1.1",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-infinite": "^0.8.0",
-    "react-soundcloud-widget": "^2.0.4",
-    "react-youtube": "^5.0.0",
-    "uglify-js": "^2.6.1"
-  },
-  "devDependencies": {
-    "browserify": "^13.0.0",
-    "code": "^1.4.0",
-    "envify": "^3.0.0",
-    "jest-cli": "~0.1.17",
-    "lab": "^5.5.1",
-    "reactify": "^1.1.1",
-    "watchify": "^3.7.0"
-  },
-  "scripts": {
-    "start": "watchify -o js/bundle.js -v -d js/app.js",
-    "build": "uglifyjs js/bundle.js -o js/bundle.min.js",
-    "test": "lab test"
-  },
-  "author": "Oted",
-  "browserify": {
-    "transform": [
-      "reactify",
-      "envify"
-    ]
-  },
-  "jest": {
-    "rootDir": "./js"
-  }
+    "name": "gsi-react",
+    "version": "1.0.0",
+    "description": "gsi frotend",
+    "main": "js/app.js",
+    "devDependencies": {
+        "reactify": "^1.1.1",
+        "watchify": "^3.7.0"
+    },
+    "scripts": {
+        "start": "node server.js"
+    },
+    "author": "Oted",
+    "browserify": {
+        "transform": [
+            "reactify",
+            "envify"
+        ]
+    },
+    "jest": {
+        "rootDir": "./js"
+    },
+    "dependencies": {
+        "classnames": "^2.1.2",
+        "react": "^0.14.6",
+        "react-dom": "^0.14.6",
+        "react-redux": "^4.1.0",
+        "redux": "^3.1.1"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.3.17",
+        "babel-core": "^6.3.17",
+        "babel-loader": "^6.2.0",
+        "babel-preset-es2015-loose": "^6.1.3",
+        "babel-preset-react": "6.3.13",
+        "babel-preset-stage-0": "^6.3.13",
+        "node-libs-browser": "^0.5.2",
+        "raw-loader": "^0.5.1",
+        "react-hot-loader": "^1.3.0",
+        "redux-devtools": "^3.0.1",
+        "redux-devtools-log-monitor": "^1.0.2",
+        "redux-devtools-dock-monitor": "^1.0.1",
+        "style-loader": "^0.12.3",
+        "todomvc-app-css": "^2.0.1",
+        "webpack": "^1.9.11",
+        "webpack-dev-server": "^1.9.0"
+    }
 }
