--- a/package.json
+++ b/package.json
@@ -1,48 +1,34 @@
 {
-    "name": "gsi-react",
-    "version": "1.0.0",
-    "description": "gsi frotend",
-    "main": "js/app.js",
-    "devDependencies": {
-        "reactify": "^1.1.1",
-        "watchify": "^3.7.0"
-    },
-    "scripts": {
-        "start": "node server.js"
-    },
-    "author": "Oted",
-    "browserify": {
-        "transform": [
-            "reactify",
-            "envify"
-        ]
-    },
-    "jest": {
-        "rootDir": "./js"
-    },
-    "dependencies": {
-        "classnames": "^2.1.2",
-        "react": "^0.14.6",
-        "react-dom": "^0.14.6",
-        "react-redux": "^4.1.0",
-        "redux": "^3.1.1"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.3.17",
-        "babel-core": "^6.3.17",
-        "babel-loader": "^6.2.0",
-        "babel-preset-es2015-loose": "^6.1.3",
-        "babel-preset-react": "6.3.13",
-        "babel-preset-stage-0": "^6.3.13",
-        "node-libs-browser": "^0.5.2",
-        "raw-loader": "^0.5.1",
-        "react-hot-loader": "^1.3.0",
-        "redux-devtools": "^3.0.1",
-        "redux-devtools-log-monitor": "^1.0.2",
-        "redux-devtools-dock-monitor": "^1.0.1",
-        "style-loader": "^0.12.3",
-        "todomvc-app-css": "^2.0.1",
-        "webpack": "^1.9.11",
-        "webpack-dev-server": "^1.9.0"
-    }
+  "name": "gsi-react",
+  "version": "1.0.0",
+  "description": "gsi frotend",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "author": "Oted",
+  "dependencies": {
+    "classnames": "^2.1.2",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.1.0",
+    "redux": "^3.1.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.3.17",
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015-loose": "^6.1.3",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "json-loader": "^0.5.4",
+    "node-libs-browser": "^0.5.2",
+    "raw-loader": "^0.5.1",
+    "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.2",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.11",
+    "webpack-dev-server": "^1.9.0"
+  }
 }
