--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
   "author": "Oted",
   "dependencies": {
     "classnames": "^2.1.2",
+    "lodash": "^4.5.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-infinite": "^0.8.0",
     "react-redux": "^4.1.0",
-    "redux": "^3.1.1"
+    "react-soundplayer": "^0.3.2",
+    "react-youtube": "^5.1.0",
+    "redux": "^3.1.1",
+    "redux-thunk": "^1.0.3",
+    "superagent": "^1.7.2",
+    "superagent-promise-plugin": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
