--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "author": "Oted",
   "dependencies": {
-    "classnames": "^2.1.2",
-    "lodash": "^4.5.1",
-    "react": "^0.14.6",
+    "react": "^0.14.8",
     "react-dom": "^0.14.6",
     "react-infinite": "^0.8.0",
     "react-motion": "^0.4.2",
@@ -19,6 +17,7 @@
     "react-youtube": "^5.1.0",
     "redux": "^3.1.1",
     "redux-thunk": "^1.0.3",
+    "soundcloud-audio": "^1.0.0",
     "superagent": "^1.7.2",
     "superagent-promise-plugin": "^2.1.0",
     "webpack": "^1.12.14"
