--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "author": "Oted",
   "dependencies": {
-    "react": "^0.14.8",
-    "react-dom": "^0.14.6",
-    "react-infinite": "^0.8.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-ga": "^2.1.0",
+    "react-infinite": "^0.9.2",
     "react-motion": "^0.4.2",
-    "react-redux": "^4.1.0",
+    "react-redux": "^4.4.5",
     "react-soundplayer": "^0.3.2",
     "react-youtube": "^5.1.0",
-    "redux": "^3.1.1",
-    "redux-thunk": "^1.0.3",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "soundcloud-audio": "^1.0.0",
     "superagent": "^1.7.2",
     "superagent-promise-plugin": "^2.1.0",
